<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="talkback_title" translatable="false">心阳世界</string>
    <string name="talkback_service_description">When TalkBack is on, your device provides spoken feedback to help blind and low-vision users. For example, it describes what you touch, select, and activate.\n\nIf you have turned TalkBack on accidentally, turn it off by tapping the switch until the green outline is around it, then double-tapping it. Do the same interaction for the resulting confirmation dialog.</string>
    <string name="talkback_on">TalkBack on</string>
    <string name="talkback_suspended">TalkBack suspended</string>
    <string name="talkback_resumed">TalkBack resumed</string>
    <string name="talkback_disabled">TalkBack has been turned off.</string>
    <string name="talkback_preferences_title">TalkBack Settings</string>
    <string name="tts_preferences_title">Text to speech Settings</string>
    <string name="talkback_preferences_subtitle">Version <xliff:g id="version_name">%1$s</xliff:g></string>
    <string name="label_manager_summary_title">Manage Custom Labels</string>
    <string name="label_manager_package_title">Manage Labels for <xliff:g id="applicationLabel" example="Gmail">%1$s</xliff:g></string>
    <string name="label_manager_no_packages_message">There are currently no custom labels. You can create one by navigating to an unlabeled image and then adding a label from the Local Context Menu.</string>
    <string name="label_manager_timestamp_text">Last modified <xliff:g id="timestamp" example="1/1/11 11:11 AM">%1$s</xliff:g></string>
    <string name="search_dialog_label">Search: <xliff:g id="search_query">%1$s</xliff:g></string>
    <string name="search_mode_open">Search mode opened.</string>
    <string name="search_mode_cancel">Search canceled.</string>
    <string name="search_mode_finish">Search finished.</string>
    <string name="search_mode_hint_start">Search mode.</string>
    <string name="search_mode_hint_no_query">No query has been entered.</string>
    <string name="search_mode_hint_query">Current query: <xliff:g id="search_query">%1$s</xliff:g>.</string>
    <string name="search_mode_hint_no_selection">No selected item.</string>
    <string name="search_mode_hint_selection">Current selection: <xliff:g id="selected_node">%1$s</xliff:g>.</string>
    <string name="notification_type_beginning_of_field">Beginning of field</string>
    <string name="notification_type_end_of_field">End of field</string>
    <string name="notification_type_selection_mode_on">Selection mode on</string>
    <string name="notification_type_selection_mode_off">Selection mode off</string>
    <string name="notification_type_selection_cleared">Selection cleared</string>
    <string name="notification_type_missed_call">Missed call</string>
    <string name="notification_type_status_mute">Mute</string>
    <string name="notification_type_status_chat">Chat</string>
    <string name="notification_type_status_error">Error</string>
    <string name="notification_type_status_more">More</string>
    <string name="notification_type_status_sdcard">SD card</string>
    <string name="notification_type_status_sdcard_usb">SD card USB</string>
    <string name="notification_status_sync">Sync</string>
    <string name="notification_type_status_sync_noanim">Sync</string>
    <string name="notification_type_status_voicemail">Voicemail</string>
    <string name="notification_type_status_started">Started</string>
    <string name="notification_type_status_stopped">Stopped</string>
    <string name="template_current_tts_engine">Using <xliff:g id="engine_name">%1$s</xliff:g></string>
    <string name="template_menu"><xliff:g id="title" example="Change granularity">%1$s</xliff:g> menu</string>
    <string name="template_alert_dialog_template">Alert <xliff:g id="message">%1$s</xliff:g></string>
    <string name="template_drawer_opened"><xliff:g id="title">%1$s</xliff:g> menu</string>
    <string name="template_text_replaced"><xliff:g id="new_text">%1$s</xliff:g> replaced <xliff:g id="old_text">%2$s</xliff:g></string>
    <string name="template_text_removed"><xliff:g id="text">%1$s</xliff:g> deleted</string>
    <string name="template_text_copied">copied, <xliff:g id="text">%1$s</xliff:g></string>
    <string name="template_text_cut">cut, <xliff:g id="text">%1$s</xliff:g></string>
    <string name="template_text_pasted">pasted, <xliff:g id="text">%1$s</xliff:g></string>
    <string name="template_text_selected"><xliff:g id="selected_text">%1$s</xliff:g>, selected</string>
    <string name="template_announce_selected_text">Selected text: <xliff:g id="selected_text">%1$s</xliff:g></string>
    <string name="template_no_text_selected">No text selected</string>
    <string name="template_text_unselected"><xliff:g id="unselected_text">%1$s</xliff:g>, unselected</string>
    <string name="template_text_error">Invalid input <xliff:g id="error_msg" example="Enter a valid number">%1$s</xliff:g></string>
    <string name="template_replaced_characters"><xliff:g id="old_text_length">%1$s</xliff:g> characters replaced with <xliff:g id="new_text_length">%2$s</xliff:g> characters</string>
    <string name="template_labeled_item"><xliff:g id="item" example="check box">%1$s</xliff:g> for <xliff:g id="label" example="Wi-Fi">%2$s</xliff:g></string>
    <string name="template_long_clicked">Long-pressed <xliff:g id="title" example="Cancel button">%1$s</xliff:g></string>
    <string name="template_percent"><xliff:g id="percentage">%1$s</xliff:g> percent.</string>
    <string name="template_charging">Charging <xliff:g id="changing_status">%1$s</xliff:g> Battery level <xliff:g id="battery_level">%2$s</xliff:g> percent.</string>
    <plurals name="template_containers">
        <item quantity="one"><xliff:g id="type" example="List">%1$s</xliff:g> showing <xliff:g id="count" example="1">%2$d</xliff:g> item.</item>
        <item quantity="other"><xliff:g id="type" example="List">%1$s</xliff:g> showing <xliff:g id="count" example="3">%2$d</xliff:g> items.</item>
    </plurals>
    <string name="value_gridview">Grid</string>
    <string name="value_listview">List</string>
    <string name="value_tabwidget">Tab bar</string>
    <string name="value_spinner">Drop down list</string>
    <string name="value_checkbox">Check box</string>
    <string name="value_radio_button">Radio button</string>
    <string name="value_button">Button</string>
    <string name="value_seek_bar">Seek control</string>
    <string name="value_switch">Switch</string>
    <string name="value_edit_box">Edit box</string>
    <string name="value_edit_box_editing">Editing</string>
    <string name="value_image">Image</string>
    <string name="value_unlabelled">Unlabelled</string>
    <string name="value_pager">Multi-page view</string>
    <string name="value_pager_page">Page</string>
    <string name="template_scroll_from_to_count">Showing items <xliff:g id="from_index">%1$d</xliff:g> to <xliff:g id="to_index">%2$d</xliff:g> of <xliff:g id="total_count">%3$d</xliff:g>.</string>
    <string name="template_scroll_from_count">Showing item <xliff:g id="from_index">%1$d</xliff:g> of <xliff:g id="total_count">%2$d</xliff:g>.</string>
    <string name="template_viewpager_index_count">Page <xliff:g id="page_index">%1$d</xliff:g> of <xliff:g id="total_count">%2$d</xliff:g></string>
    <string name="template_viewpager_index_count_short"><xliff:g id="page_index">%1$d</xliff:g> of <xliff:g id="total_count">%2$d</xliff:g></string>
    <string name="template_password_selected">Characters <xliff:g id="from_index">%1$d</xliff:g> to <xliff:g id="to_index">%2$d</xliff:g></string>
    <string name="template_password_traversed">Character <xliff:g id="index">%1$d</xliff:g></string>
    <string name="template_capital_letter">capital <xliff:g id="uppercase_character">%1$s</xliff:g></string>
    <string name="value_password">password</string>
    <string name="value_sliding_drawer_opened">Sliding drawer opened</string>
    <string name="value_notification_shade_opened">Shade opened</string>
    <string name="value_options_menu_open">Options.</string>
    <string name="value_text_cleared">Cleared text</string>
    <string name="value_text_max_length">Maximum length reached</string>
    <string name="value_text_removed">deleted</string>
    <string name="value_selected">selected</string>
    <string name="value_checked">checked</string>
<string name="settings_radio_button" translatable="false">读屏</string>
<string name="my_radio_button" translatable="false">我的</string>
<string name="tools_radio_button" translatable="false">工具</string>
<string name="apk_radio_button" translatable="false">应用</string>
  <string name="buy_vip_button" translatable="false">购买VIP会员服务</string>
  <string name="bind_vip_button" translatable="false">激活VIP服务</string>
  <string name="accessibility_settings_button" translatable="false">辅助功能</string>
  <string name="tts_settings_button" translatable="false">文本转语音</string>
  <string name="settings_activity_button" translatable="false">读屏设置</string>
  <string name="language_and_input_button" translatable="false">语言和输入法</string>
  <string name="apps_button" translatable="false">应用管理</string>
  <string name="developer_button" translatable="false">开发者设置</string>
<string name="setting_ring_button" translatable="false">铃声设置</string>
  <string name="yzm_activity_button" translatable="false">验证码识别</string>
<string name="back_button" translatable="false">返回</string>
<string name="register_title" translatable="false">心阳世界-注册</string>
<string name="login_title" translatable="false">心阳世界-登录</string>
<string name="phone_edit" translatable="false">请输入手机号</string>
<string name="password_edit" translatable="false">请输入6置16位的密码</string>
<string name="login_button" translatable="false">立即登录</string>
<string name="register_button" translatable="false">注册新账号</string>
<string name="reset_password_button" translatable="false">忘记密码——重设</string>
<string name="exit_button" translatable="false">关闭</string>
<string name="gain_code_button" translatable="false">获取手机验证码</string>
<string name="code_edit" translatable="false">请输入收到的验证码</string>
<string name="password_repeat_edit" translatable="false">请再次输入密码</string>
<string name="nickname_edit" translatable="false">请输入你的昵称，昵称将无法修改</string>
<string name="register_just_button" translatable="false">立即注册</string>
<string name="reset_password_title" translatable="false">心阳世界-重设密码</string>
<string name="new_password_edit" translatable="false">请输入你的新密码</string>
<string name="new_password_repeat_edit" translatable="false">请再次输入你的新密码</string>
<string name="reset_password_just_button" translatable="false">提交</string>
	<string name="btnAgentContacts" translatable="false">联系我们</string>
	<string name="btnShared" translatable="false">分享有礼</string>
    <string name="notepad_title" translatable="false">编辑器</string>
    <string name="notepad_list_title" translatable="false">文本管理器</string>
	<string name="btn_new_file" translatable="false">新建</string>
	<string name="btn_save_file" translatable="false">保存</string>
	<string name="btn_save_file_a" translatable="false">另存为</string>
	<string name="edit_text_title" translatable="false">新建文本文档</string>
	<string name="SR_TIME">时间</string>
<string name="SR_SUN">公历日期</string>
<string name="SR_LUNAR">农历</string>
<string name="SR_RETURN">返回</string>
<string name="SR_BATTERY">电量</string>
<string name="SR_NETWORK">无线网状态</string>
<string name="SR_XINYANG">读屏设置</string>
<string name="SR_CHECKLUNAR">查农历</string>
<string name="SR_CHECKSUN">查公历</string>
<string name="SR_SEARCH">查询： 日期、节气、节日</string>
<string name="SR_CHECK">查询</string>
<string name="SR_CONTINUE">重选类型</string>
<string name="SR_SUNPOSITION">查看节气</string>
<string name="SR_FESTIVAL">查看节日</string>
<string name="SR_DESCRIPTION_CHECKLUNAR">查农历： 根据指定公历日期查询农历</string>
<string name="SR_DESCRIPTION_CHECKSUN">查公历： 根据指定农历查询公历</string>
<string name="SR_DESCRIPTION_LUNAR_DATE">输入农历年月日，查今年可省略年份，闰月在月份前加0</string>
</resources>