<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

<LinearLayout 
android:layout_width="match_parent"
android:layout_height="48dp"
android:background="@null" 
>

<Button 
android:id="@+id/back_button"
android:layout_width="48dp"
android:layout_height="48dp"
android:text="@string/back_button"
/>

<TextView 
android:layout_width="0dp"
android:layout_height="match_parent"
android:layout_weight="1"
android:text="@string/reset_password_title"
android:contentDescription="@string/reset_password_title"
/>

</LinearLayout>

<EditText
android:id="@+id/phone_edit"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="30dp"
android:layout_marginRight="30dp"
android:layout_marginTop="50dp"
android:hint="@string/phone_edit"
android:textSize="18sp"
android:inputType="phone"
android:maxLength="11"
/>

<Button
android:id="@+id/gain_code_button"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="30dp"
android:layout_marginRight="30dp"
android:layout_marginTop="10dp"
android:text="@string/gain_code_button"
/>

<EditText
android:id="@+id/code_edit"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="30dp"
android:layout_marginRight="30dp"
android:layout_marginTop="50dp"
android:hint="@string/code_edit"
android:textSize="18sp"
android:inputType="number"
android:maxLength="6"
/>

<EditText
android:id="@+id/password_edit"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="30dp"
android:layout_marginRight="30dp"
android:layout_marginTop="10dp"
android:hint="@string/new_password_edit"
android:textSize="18sp"
android:inputType="textPassword"
/>

<EditText
android:id="@+id/password_repeat_edit"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="30dp"
android:layout_marginRight="30dp"
android:layout_marginTop="10dp"
android:hint="@string/new_password_repeat_edit"
android:textSize="18sp"
android:inputType="textPassword"
/>

<Button
android:id="@+id/reset_password_button"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="30dp"
android:layout_marginRight="30dp"
android:layout_marginTop="10dp"
android:text="@string/reset_password_just_button"
/>

</LinearLayout>
