<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

<LinearLayout 
android:layout_width="match_parent"
android:layout_height="48dp"
android:background="@null" 
>

<Button 
android:id="@+id/back_button"
android:layout_width="48dp"
android:layout_height="48dp"
android:text="@string/back_button"
/>

<TextView 
android:id="@+id/title_notepad_name"
android:layout_width="0dp"
android:layout_height="match_parent"
android:layout_weight="1"
android:text="@string/notepad_title"
/>

<Button 
android:id="@+id/btn_save_file_a"
android:layout_width="48dp"
android:layout_height="48dp"
android:textSize="20sp"
android:background="@null"
android:text="@string/btn_save_file_a"
/>

<Button 
android:id="@+id/btn_save_file"
android:layout_width="48dp"
android:layout_height="48dp"
android:textSize="20sp"
android:background="@null"
android:text="@string/btn_save_file"
/>

</LinearLayout>

<EditText 
android:id="@+id/edit_text_title"
android:layout_width="match_parent"
android:layout_height="48dp"
android:layout_marginTop="20dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp"
android:text="@string/edit_text_title"
android:singleLine="true"
android:textSize="20sp"
android:scrollHorizontally="true"
/>

<EditText 
android:id="@+id/edit_text_area"
android:layout_width="match_parent"
android:layout_height="0dp"
android:layout_weight="1"
android:layout_marginTop="10dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp"
android:layout_marginBottom="20dp"
android:textSize="15sp"
/>

</LinearLayout>
