<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#3872F0">

<Button 
android:id="@+id/btnShared"
android:layout_width="48dp"
android:layout_height="48dp"
android:textSize="20sp"
android:background="@null"
android:text="@string/btnShared"
/>

 <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/talkback_title"
            android:textColor="#ffffff"
            android:textSize="16sp" />

<Button 
android:id="@+id/btnAgentContacts"
android:layout_width="48dp"
android:layout_height="48dp"
android:textSize="20sp"
android:background="@null"
android:text="@string/btnAgentContacts"
/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null" />

    <RadioGroup
        android:id="@+id/radio_group_tab"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:gravity="center"
        android:orientation="horizontal">

<!--
        <RadioButton
            android:id="@+id/radio_button_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/audio_radio_button" />
-->

        <RadioButton
            android:id="@+id/radio_button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center"
            android:text="@string/settings_radio_button" />

        <RadioButton
            android:id="@+id/radio_button_tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tools_radio_button" />

        <RadioButton
            android:id="@+id/radio_button_apk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/apk_radio_button" />

        <RadioButton
            android:id="@+id/radio_button_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_radio_button" />

    </RadioGroup>

</LinearLayout>
