<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

<LinearLayout 
android:layout_width="match_parent"
android:layout_height="48dp"
android:background="@null" 
>

<Button 
android:id="@+id/back_button"
android:layout_width="48dp"
android:layout_height="48dp"
android:text="@string/back_button"
/>

<TextView 
android:id="@+id/title_notepad_list_name"
android:layout_width="0dp"
android:layout_height="match_parent"
android:layout_weight="1"
android:text="@string/notepad_list_title"
/>

<Button 
android:id="@+id/btn_new_file"
android:layout_width="48dp"
android:layout_height="48dp"
android:textSize="20sp"
android:background="@null"
android:text="@string/btn_new_file"
/>

</LinearLayout>

    <ListView 
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
android:layout_weight="1"
/>

</LinearLayout>
